updated merches controller with current user working

--- a/Views/Merches/Delete.cshtml
+++ b/Views/Merches/Delete.cshtml
@@ -24,11 +24,11 @@
             @Html.DisplayFor(model => model.MerchPrice)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.UserId)
+            @*@Html.DisplayNameFor(model => model.ApplicationUserId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
+            @Html.DisplayFor(model => model.ApplicationUserId)
+        </dd>*@
         <dt>
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
