--- a/Views/Merches/Edit.cshtml
+++ b/Views/Merches/Edit.cshtml
@@ -23,10 +23,10 @@
                 <input asp-for="MerchPrice" class="form-control" />
                 <span asp-validation-for="MerchPrice" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+            <div hidden class="form-group">
+                @*<label asp-for="ApplicationUserId" class="control-label"></label>*@
+                <input hidden asp-for="ApplicationUserId" class="form-control" />
+                @*<span asp-validation-for="ApplicationUserId" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="ImagePath" class="control-label"></label>
