--- a/Views/Merches/Create.cshtml
+++ b/Views/Merches/Create.cshtml
@@ -21,20 +21,21 @@
                 <label asp-for="MerchPrice" class="control-label"></label>
                 <input asp-for="MerchPrice" class="form-control" />
                 <span asp-validation-for="MerchPrice" class="text-danger"></span>
+
             </div>
             @*<div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div>
+            <label asp-for="UserId" class="control-label"></label>
+            <input asp-for="UserId" class="form-control" />
+            <span asp-validation-for="UserId" class="text-danger"></span>
+        </div>*@
+            @*<div class="form-group">
+            <label asp-for="ImagePath" class="control-label"></label>
+            <input asp-for="ImagePath" class="form-control" />
+            <span asp-validation-for="ImagePath" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <label asp-for="MerchTypeId" class="control-label"></label>
-                <select asp-for="MerchTypeId" class ="form-control" asp-items="ViewBag.MerchTypeId"></select>
+                <select asp-for="MerchTypeId" class="form-control" asp-items="ViewBag.MerchTypeId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
