--- a/Views/Merches/Edit.cshtml
+++ b/Views/Merches/Edit.cshtml
@@ -28,11 +28,11 @@
                 <input hidden asp-for="ApplicationUserId" class="form-control" />
                 @*<span asp-validation-for="ApplicationUserId" class="text-danger"></span>*@
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ImagePath" class="control-label"></label>
                 <input asp-for="ImagePath" class="form-control" />
                 <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="MerchTypeId" class="control-label"></label>
                 <select asp-for="MerchTypeId" class="form-control" asp-items="ViewBag.MerchTypeId"></select>
