--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyMerchTrack2</title>
+    <title>@ViewData["Title"] - MyMerchTracker</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MyMerchTrack2</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MyMerchTracker</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+
                     <li><a asp-area="" asp-controller="Merches" asp-action="Index">MyMerch</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Merches" asp-action="Index">MyShirts</a></li>
+                    <li><a asp-area="" asp-controller="Merches" asp-action="Index">MyCaps</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
@@ -45,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - MyMerchTrack2</p>
+            <p>&copy; @DateTime.Now.Year - MyMerchTracker</p>
         </footer>
     </div>
 
