--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <center><h1>My Merch Tracker</h1></center>
 </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 header">
         <center><h2>Welcome to My Merch Tracker</h2></center>
         <p>
             My Merch Tracker is an easy way to keep
